hdone/objects/Worker__c.object
<CustomObject>
    <description>Worker or user information. Used largely for persons completing items that are not Salesforce users. Captures IDs and other demographic information.</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonus_Level__c</fullName>
        <description>Bonus level for Mturk Workers</description>
        <inlineHelpText>Bonus level for Mturk Workers</inlineHelpText>
        <label>Bonus Level</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_Individual__c</fullName>
        <description>Individual Mturk Qualification ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Individual Mturk Qualification ID</inlineHelpText>
        <label>Qualification Individual</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkerId__c</fullName>
        <description>Unique Id for worker. May be from external system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Id for worker.</inlineHelpText>
        <label>WorkerId</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Worker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>WorkerId__c</columns>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>wrk-{00000}</displayFormat>
        <label>Worker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>